views/alarmcal.css
section {
    padding: 1em;
}

label {
    display:block;
    padding-top:1em;
}

input {
    width: 100%;
    margin-right:12px;
    box-sizing: border-box;
    max-width: 800px;
}

input[type="checkbox"] {
    width: auto;
}

fieldset.datetime-group input {
    width: 100%;
    max-width: 400px;
}

td.day_num {
  width: 100px;
  text-align: center;
  border: 1px solid grey;
  background: lightgrey;
}
td.day {
  width: 100px;
  height: 50px;
  border: 1px solid black;
}
td.unused_day {
  width: 100px;
  height: 50px;
}
td.unused_day_num {
  width: 100px;
}
table.cal_table {
  border-spacing: 0;
  border-collapse: collapse;
}
table.cal_table tr td {
  padding-top: 5px;
}
table.cal_table td.day.today {
  background-color: lightyellow;
}
table.cal_table td.day_num.today {
  background-color: yellow;
}
.admin_tool {
  display: inline-block;
  padding: 4px 10px;
  margin-left: 4px;
  background-color: #57b;
  color: #fff;
  border: none;
  border-radius: 4px;
  text-decoration: none;
  font-size: 0.85rem;
  cursor: pointer;
}
.admin_tool:hover {
  background-color: #46a;
}

table.item-table {
  border-collapse: collapse;
  border-spacing: 0;
}

table.item-table th,
table.item-table td {
  padding: 6px 16px;
  text-align: left;
}

table.item-table thead tr {
  border-bottom: 2px solid #888;
}

table.item-table th {
  background-color: #dde;
}

table.item-table tbody tr {
  border-bottom: 1px solid #ccc;
}

table.item-table tbody tr:nth-child(odd) {
  background-color: #f5f5f5;
}

table.item-table tbody tr:nth-child(even) {
  background-color: #e8eaf0;
}

table.item-table tbody tr:hover {
  background-color: #d8dff0;
}

.repeat-days label {
  display: inline-block;
  margin-right: 1em;
}

p.warning {
  color: #c55;
  font-weight: bold;
}

